--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ serde = { version = "1.0.132", features = ["derive"]}
 reqwest = { version = "0.11.8", features = ["json"] }
 tokio = { version = "1.15.0", features = ["full"] }
 structopt = "0.3.25"
+base64 = "0.13.0"
+deflate = "1.0.0"
+inflate = "0.4.5"
